changing color of click button of product-items

--- a/2. reactjs-concepts-2024/src/components/products/components/product-item.module.css
+++ b/2. reactjs-concepts-2024/src/components/products/components/product-item.module.css
@@ -5,6 +5,13 @@
   color: white;
 }
 
+.buttonStyle2 {
+  background-color: rgb(194, 57, 57);
+  font-weight: bolder;
+  font-size: 18px;
+  color: rgb(20, 11, 11);
+}
+
 .productTitle {
   font-size: 20px;
   color: rgb(109, 12, 12);
